force-app/main/default/objects/idbx_IdeaBox_Scorecard__c/idbx_IdeaBox_Scorecard__c.object-meta.xml
<CustomObject>
    <label>IdeaBox Scorecard</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>IdeaBox Scorecard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IdeaBox Scorecards</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>