force-app/main/default/objects/idbx_IdeaBox_Scorecard__c/fields/idbx_IdeaBox_User__c.field-meta.xml
<CustomField>
    <fullName>idbx_IdeaBox_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who owns this IdeaBox Scorecard.</description>
    <inlineHelpText>User who owns this IdeaBox Scorecard.</inlineHelpText>
    <label>IdeaBox User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>idbx_IdeaBox_Scorecards</relationshipName>
    <type>Lookup</type>
</CustomField>