force-app/main/default/objects/idbx_IdeaBox_Scorecard__c/fields/idbx_Total_Idea_Points__c.field-meta.xml
<CustomField>
    <fullName>idbx_Total_Idea_Points__c</fullName>
    <description>Calculates the total accumulated points of a user based on all ideas they have submitted.</description>
    <inlineHelpText>Calculates the total accumulated points of a user based on all ideas they have submitted.</inlineHelpText>
    <label>Total Idea Points</label>
    <summarizedField>idbx_Idea__c.idbx_Idea_Points__c</summarizedField>
    <summaryForeignKey>idbx_Idea__c.IdeaBox_Scorecard__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>